# rs-polygon2

./: Cargo.toml  README.md
examples/: simple.rs
src/: area.rs  closest_edge.rs  contains_point.rs  distance.rs  in_rect.rs  intersection.rs  is_convex.rs  is_simple.rs  lib.rs  line_intersection.rs  point_in_rect.rs  point_in_triangle.rs  point_to_line_distance.rs  triangulate.rs
src/clipping/: difference.rs  intersection.rs  mod.rs  union.rs
src/clipping/greiner_hormann/: intersect.rs  mod.rs  polygon.rs  vertex.rs
