[package]
name = "polygon2"
version = "0.3.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["polygon2", "polygon", "2d", "2", "clipping"]
description = "polygon 2d functions"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-polygon2.git"
homepage = "https://gitlab.com/nathanfaucett/rs-polygon2"

[dependencies]
num-traits = "0.2"
vec2 = "0.2"

[dev-dependencies]
